project(Internals)
cmake_minimum_required(VERSION 2.6)

add_subdirectory(allocator)
add_subdirectory(autorelease_pool)
add_subdirectory(autorelease_pools_stack)
add_subdirectory(object)
add_subdirectory(number)
add_subdirectory(nothing)
add_subdirectory(comparison)
add_subdirectory(logic)
add_subdirectory(char)

add_subdirectory(list)
add_subdirectory(stack)

add_subdirectory(number_factory)
add_subdirectory(char_factory)

#add_subdirectory(mmu)
#add_subdirectory(queue)
#add_subdirectory(string)
#add_subdirectory(set)
#add_subdirectory(map)
#add_subdirectory(injection)
#add_subdirectory(string_set)
#add_subdirectory(string_map)
#add_subdirectory(uarray)
#add_subdirectory(lexer)
#add_subdirectory(machine)
#add_subdirectory(pair_map)
#add_subdirectory(string_factory)
#add_subdirectory(token_factory)
