project(ExternalActorManipulator)
cmake_minimum_required(VERSION 2.6)
add_library(ExternalActorManipulator ${Library} code.c)
target_link_libraries(ExternalActorManipulator Object Number Logic Comparation Allocator File Method NumberFactory LogicFactory StringFactory CharFactory MethodFactory Machine ListMap List ThreadManager AutoreleasePool ExternalEntitiesFactory Processor)