project(ExternalActorsFactory)
cmake_minimum_required(VERSION 2.6)
add_library(ExternalActorsFactory ${Library} code.c)
target_link_libraries(ExternalActorsFactory Object Number Logic Comparation Allocator File Method NumberFactory LogicFactory StringFactory CharFactory MethodFactory Machine List Console Undestroyable Processor ExternalMachineManipulator ExternalActorManipulator ListMap Char ExternalEntitiesFactory)