project(ExternalNumberManipulator)
cmake_minimum_required(VERSION 2.6)
add_library(ExternalNumberManipulator ${Library} code.c)
target_link_libraries(ExternalNumberManipulator Object Number Logic Comparation Allocator File Method NumberFactory LogicFactory StringFactory CharFactory MethodFactory ListMap List UIDGenerator Machine Stack Processor Synonim Queue MachineScheduler ExternalObjectManipulator ExternalConsoleManipulator ExternalFileManipulator ExternalMachineManipulator ExternalEntitiesFactory)