project(ExternalObjectsFactory)
cmake_minimum_required(VERSION 2.6)
add_library(ExternalObjectsFactory ${Library} code.c)
target_link_libraries(ExternalObjectsFactory Object Number Logic Comparation Allocator File Method NumberFactory LogicFactory StringFactory CharFactory MethodFactory Machine List Console Processor ExternalMachineManipulator ExternalObjectManipulator ListMap ExternalEntitiesFactory)