project(Machine)
cmake_minimum_required(VERSION 2.6)
add_library(Machine ${Library} code.c)
target_link_libraries(Machine Object Number Logic Comparation Allocator File Method NumberFactory LogicFactory StringFactory CharFactory MethodFactory List ListNode ListIterator ListMap Char Map MapIterator ListMapNode Queue Synonim Stack ListMapIteratorElement ListMapIterator UIDGenerator Processor MachineScheduler ExternalObjectManipulator ExternalConsoleManipulator ExternalFileManipulator ExternalMachineManipulator AutoreleasePool Console JSON)